      the people requesting it (too many to list) and Carl Chenet for the patch;
      Closes: #214103, #223335, #232829, #244763, #363156, #433323, #517989

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py
    - more clean handling of response in error/info dialogs; thanks to
      Julian Andres Klode; Closes: #527259
    - open a terminal when fallbacking to text mode if stdout is not available

 -- Luca Bruno <lethalman88@gmail.com>  Sun, 22 Nov 2009 11:33:28 +0100

reportbug (4.8) unstable; urgency=low

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * reportbug/debianbts.py
    - fix error message in case no package is specified for release.d.o; thanks
      to Joachim Breitner for the report; Closes: #545747
  * bin/reportbug
    - use LC_ALL=C when calling bug scripts (to avoid localized messages);
      thanks to Alexander Galanin for the report; Closes: #546276
    - pass '--ignore-permissions' to debsums (because it's easier to workaround
      problems than fixing them); thanks to Davide Prina for the report;
      Closes: #539695
    - improved wording of debsums checks preamble; thanks to Jari Aalto for the
      report; Closes: #322567
  * debian/control
    - added version (>= 2.0.47) to depends on debsums, to have the latest
      features

  [ Pierre Habouzit ]
  * Fix small issues with the release.debian.org binNMU template.

 -- Sandro Tosi <morph@debian.org>  Wed, 16 Sep 2009 22:56:10 +0200

reportbug (4.7) unstable; urgency=low

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump reportbug version
  * debian/control
    - replace python-gnome2-extras with python-gtkspell in Suggests; thanks to
      Josselin Mouette for the report; Closes: #541598
  * reportbug/ui/text_ui.py
    - nomore use writelines() when filtering, but loop over lines then decode an
      print one by one; thanks to Jakub Wilk for the report and Carl Chenet for
      the patch: Closes: #541791